Fixed overflow of tall images in timeline

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -247,14 +247,19 @@ h1 {
     flex: 2;
     padding-left: 1em;
     padding-right: 1em;
+    max-height: 100%;
 }
 
 .timeline-img {
     flex: 3;
-    text-align: center;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .timeline-img img {
     min-width: 400px;
+    max-height: 100%;
     max-width: 100%;
 }
